# cpp-project-template

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/sandbox/include/sandbox/: application.hpp
examples/sandbox/src/: CMakeLists.txt  application.cpp  main.cpp
include/mylib/: core.hpp
src/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
